--- a/php/style/style.css
+++ b/php/style/style.css
@@ -99,9 +99,6 @@ html, body {
 #menu:after {
 	clear: both;
 }
-#menu {
-	zoom:1;
-}
 #menu >li {
 	font-size: 1em;
 	float: left;
@@ -546,7 +543,7 @@ div.section3{
 	padding:0;
 	float: left;
 	width: 100%;
-	clear: both;	
+	clear: both;
 }
 .bld {
 	font-weight: bold;
@@ -608,7 +605,7 @@ div.section3{
 	display: inline-block;
 	width: 100%;
 	float: left;
-	margin: 2.5em 0 2em 6em 0px;
+	margin: 2.5em 2em 6em 0px;
 	padding: 1px 0.5em 1em 0.2em;
 }
 .line{
@@ -619,15 +616,14 @@ div.section3{
     font-size: 1px;
 }
 .subscribe .bank{
-	font-family:  'Open Sans' sans-serif;
+	font-family:  'Open Sans', sans-serif;
 	float: left;
-	color: #000000 ;
+	color: #000000;
 	text-align: left;
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 1.8em;
 	padding-top: 1em;
-	text-decoration: italic;
 }
 .subscribe h3 {
 	padding-top: 2em;
@@ -643,8 +639,8 @@ div.section3{
 	display: inline-block;
 	width: 100%;
 	float: left;
-	margin: 2.5em 0 2em 6em 0px;
-	padding: 1px 0.5em 1em 0.2em;
+	margin: 2.5em 2em 6em 0em;
+	padding: 0em 0.5em 1em 0.2em;
 }
 #us a {
 	color: #8B0000;
@@ -653,8 +649,8 @@ div.section3{
 	display: inline-block;
 	width: 100%;
 	float: left;
-	margin: 2.5em 0 2em 6em 0px;
-	padding: 1px 0.5em 15em 0.2em;
+	margin: 2.5em 2em 6em 0em;
+	padding: 0em 0.5em 15em 0.2em;
 }
 
 .issue {
@@ -778,7 +774,7 @@ div.section_article{
 	list-style-type:disc;
 }
 .topic a{
-	font-family: 'Open Sans' 'siddhantaa';
+	font-family: 'Open Sans', 'siddhantaa';
 	color: #3E3E3E;
 	font-size: 1em;
 	text-decoration:none;
@@ -806,7 +802,6 @@ div.section_article{
 	width: 100%;
 	float: left;
 }
-
 .nav_archive{
 	float: left;
 	width: 12%;
@@ -851,7 +846,7 @@ div.section_article{
 	width: 75%;
 	min-height:1px;
 	float:right;
-	padding:0.5 10px;
+	padding:0.5px 10px;
 	display: inline-block;
 }
 .alphabet {
