Commit No. 7 Databases insertion and php inclusion

--- a/design/php/css/style.css
+++ b/design/php/css/style.css
@@ -1159,17 +1159,17 @@
 		
 		.titlespan {
 			color:#112;
-			font-family:'siddhanta';
+			font-family:'Sanskrit2003';
 			font-size:1em;
 		}
 		.featurespan {
 			color: #db4b39;
-			font-family:'siddhanta';
+			font-family:'Sanskrit2003';
 			font-size:1em;
 		}
 		.authorspan {
 			color:#3a5795;
-			font-family:'siddhanta';
+			font-family:'Sanskrit2003';
 			font-size:1em;
 		}
 		.box			{ display:block; }
