--- a/design/php/css/style.css
+++ b/design/php/css/style.css
@@ -532,7 +532,7 @@
 		input[type="submit"]:hover,
 		input[type="reset"]:hover,
 		.button:hover {
-			background: rgba(188, 202, 206, 0.15);
+			background: #ccb484;
 			border-color: inherit;
 		}
 
@@ -549,8 +549,8 @@
 			input[type="submit"].special:hover,
 			input[type="reset"].special:hover,
 			.button.special:hover {
-				background: #96dad1 !important;
-				border-color: #96dad1 !important;
+				background: #ccb484 !important;
+				border-color: #ccb484 !important;
 			}
 
 		input[type="button"].fit,
@@ -1175,8 +1175,15 @@
 		.box			{ display:block; }
 		.box .inside	{ display:inline-block;border: 1px dotted #D3D3D3;padding: 20px; border-radius:10px;background: #f2f5f6;  position: relative; margin: 10px 0;}
 		.letters {
-			border:1px solid red;
-		width: 600px;
+			width: 100%;
+			text-align:center;
+			padding-bottom:2em;
+		}
+		.letters a {
+			padding:1em 0.3em;
+		}
+		.letters a:hover {	
+			color:#8b0000;
 		}
 		.volumes {
 			width:100%;
@@ -1211,5 +1218,13 @@
 		.inum  {
 				border: 1px solid red;
 			}
-		
-
+		.inum {
+			font-family: 'Lato', sans-serif;
+			font-size: 15pt;
+			font-weight: 300;
+		}
+		.voliss {
+			font-family: 'Lato', sans-serif;
+			font-size: 0.9em;
+			font-weight: 300;
+		}
