--- a/php/css/style.css
+++ b/php/css/style.css
@@ -1,7 +1,7 @@
 @import url("font-awesome.min.css");
 @import url("http://fonts.googleapis.com/css?family=Lato:300,400,900");
 @font-face {
-  font-family: 'Sanskrit2003';
+  font-family: 'Sanskrit 2003';
   font-style: normal;
   font-weight: 300;
   src:  url(../fonts/Sanskrit2003.ttf) format('ttf');
@@ -1159,17 +1159,23 @@
 		
 		.titlespan {
 			color:#112;
-			font-family:'Sanskrit2003';
+/*
+			font-family:'Sanskrit 2003';
+*/
 			font-size:1em;
 		}
 		.featurespan {
 			color: #db4b39;
-			font-family:'Sanskrit2003';
+/*
+			font-family:'Sanskrit 2003';
+*/
 			font-size:1em;
 		}
 		.authorspan {
 			color:#3a5795;
-			font-family:'Sanskrit2003';
+/*
+			font-family:'Sanskrit 2003';
+*/
 			font-size:1em;
 		}
 		.box			{ display:block; }
@@ -1194,7 +1200,7 @@
 		.volumes a {
 			display:inline-block;
 			padding:1.5em 1.5em;
-			height:190px;
+			height:210px;
 /*
 			box-shadow:10px 10px 10px #EEE;
 */
@@ -1227,6 +1233,6 @@
 		}
 		.voliss {
 			font-family: 'Lato', sans-serif;
-			font-size: 0.9em;
+			font-size: 0.9em ;
 			font-weight: 300;
 		}
