--- a/php/css/style.css
+++ b/php/css/style.css
@@ -430,12 +430,12 @@
 			display: block;
 			float: left;
 			text-align: center;
-			width: 50%;
+			width: 40%;
 		}
 
 			ul.featured-icons li .icon {
 				display: inline-block;
-				font-size: 6.25em;
+				font-size: 4.5em;
 				height: 1.25em;
 				line-height: 1.25em;
 				width: 1em;
@@ -751,16 +751,16 @@
 		background: #fff;
 		box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.075);
 		line-height: 2.25em;
-		min-width: 13em;
-		padding: 1em 0;
+		min-width: 10em;
+		padding: 0.1em 0;
 		text-transform: uppercase;
-		margin-top: calc(-1em + 1px);
+		margin-top: calc(-2em + 1px);
 	}
 
 		.dropotron.level-0 {
 			font-size: 0.7em;
 			font-weight: 400;
-			margin-top: 1.5em;
+			margin-top:1em;
 		}
 
 			.dropotron.level-0:before {
@@ -768,9 +768,9 @@
 				border-left: solid 0.5em transparent;
 				border-right: solid 0.5em transparent;
 				content: '';
-				left: 0.75em;
+				left: 0.5em;
 				position: absolute;
-				top: -0.45em;
+				top: -0.35em;
 			}
 
 		.dropotron > li {
@@ -1207,6 +1207,10 @@
 		}
 		.volumes p {
 			font-size:0.85em;
+		}
+		.toc_image {
+			display:block;
+			margin-top:-4em;	
 		}
 		
 		/* Hollow */
