--- a/php/css/style.css
+++ b/php/css/style.css
@@ -203,12 +203,26 @@
 		border: solid 1px rgba(124, 128, 129, 0.2);
 		color: inherit;
 		display: block;
-		padding: 0.75em;
+		padding: 0.5em 0.75em 0.75em 0.75em;
 		text-decoration: none;
 		width: 100%;
 		outline: 0;
 	}
 
+	select {
+		-moz-transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+		-webkit-transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+		-o-transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+		-ms-transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+		transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+		background: none;
+		border: solid 1px rgba(124, 128, 129, 0.2);
+		color: inherit;
+		text-decoration: none;
+		outline: 0;
+		padding: 0.5em 0em 0.5em 0em;
+		color: rgba(124, 128, 129, 0.8);
+	}
 		input[type="text"]:focus,
 		input[type="password"]:focus,
 		input[type="email"]:focus,
@@ -219,7 +233,7 @@
 	input[type="text"],
 	input[type="password"],
 	input[type="email"] {
-		line-height: 1em;
+		line-height: 1.2em;
 	}
 
 	::-webkit-input-placeholder {
