--- a/php/css/style.css
+++ b/php/css/style.css
@@ -978,7 +978,7 @@
 	#footer {
 		background: #e8eef4;
 		color: #7c8081;
-		padding: 5em 5em 10em 5em;
+		padding: 4em;
 		text-align: center;
 	}
 
