--- a/php/css/style.css
+++ b/php/css/style.css
@@ -1241,6 +1241,7 @@
 		.toc_image img{
 			border: 6px solid white;
 			box-shadow: 0 1px 2px rgba(34, 25, 25, 0.3) !important;
+			height: 140px;  
 		}
 		
 		/* Hollow */
