--- a/php/css/style.css
+++ b/php/css/style.css
@@ -648,12 +648,20 @@
 		cursor: default;
 		font-size: 0.8em;
 		left: 0;
-		padding: 1.7em 1.5em;
+		padding: 1em 1.5em;
 		position: fixed;
 		top: 0;
 		width: 100%;
 		z-index: 10000;
 	}
+
+		#header h1 {
+			font-weight: 300;
+			font-family:'siddhanta';
+			font-size:1.32em;
+			line-height:1.22em;
+			margin: 0;
+		}
 
 			#header h1 span {
 				font-weight: 300;
@@ -681,7 +689,7 @@
 					color: inherit;
 					display: inline-block;
 					line-height: 1em;
-					padding: 0.5em 0.75em;
+					padding: 0.6em 0.75em;
 					text-decoration: none;
 				}
 
