Commit No. 96 Special Issues added

--- a/php/css/style.css
+++ b/php/css/style.css
@@ -1274,3 +1274,12 @@
 			margin-bottom: 1.1em !important;
 		}
 		
+		.head_t1{
+			font-size: 0.9em;
+		}
+		.head_t2{
+			font-size: 0.85em;
+		}
+		.head_t3{
+			font-size: 0.8em;
+		}
