--- a/php/css/style.css
+++ b/php/css/style.css
@@ -1,5 +1,7 @@
 @import url("font-awesome.min.css");
+/*
 @import url("http://fonts.googleapis.com/css?family=Lato:300,400,900");
+*/
 @font-face {
   font-family: 'Sanskrit 2003';
   font-style: normal;
@@ -10,11 +12,12 @@
   font-family: 'siddhanta';
   font-style: normal;
   font-weight: 300;
-  src:  url(../fonts/siddhanta.ttf) format('ttf');
+  src:  url(../fonts/siddhanta.ttf);
 }
 /* Basic */
 
 	body, #skel-layers-wrapper {
+		font-family: 'Open Sans';
 		background: #f3f6fa;
 	}
 
@@ -895,6 +898,111 @@
 				margin: 2em 0 0 0;
 			}
 
+.current_issue{
+	width: 960px;
+	min-height: 450px;
+	height: 100%;	
+	margin: 0 auto ;
+	border: 4px solid #FFF;
+    -moz-border-radius: 10px 10px 10px 10px;
+    -webkit-border-radius: 10px 10px 10px 10px;	
+	background-color: #413034;    
+    padding: 10px;
+    line-height: 1.1em
+}
+
+.current_issue .cur_image{
+	width: 30%;
+	float: left;
+/*
+	border: 1px solid #FFF;
+	margin: 10px 15px;
+*/
+}
+
+.current_issue .cur_image img{
+	border: 2px solid #FFF;
+	text-align: center;
+}
+
+.cur_month{
+	font-size: 15px;
+	font-weight: bold;
+	color: #FFC600;
+}
+.current_issue .cur_text{
+	width: 70%;
+	float: left;
+/*
+	border: 1px solid #FFF;
+*/
+	margin: 0 auto;
+}
+
+.inthisissue{
+	font-size: 20px; 
+	font-weight: bold;
+	color: white;
+	text-shadow: 1px 1px 1px #333;		
+	margin: 10px 0px;	
+}
+.rule{
+	height:1px;
+	background:-moz-linear-gradient(left, #413034 0%,#FFD700 50%,#413034 100%); 
+	background:-webkit-linear-gradient(left, #413034 0%,#FFD700 50%,#413034 100%); 
+	background:linear-gradient(left, #413034 0%,#FFD700 50%,#413034 100%);
+	margin: 1em auto 1em auto;
+}
+
+.cur_text .inthis_left{
+	text-align: center;
+	float:left;
+	margin-left: 10%;
+}
+.cur_text .inthis_right{
+	float:left;
+	margin-left: 10%;
+}
+
+.toc_entry{	
+	font-family: siddhanta;
+	font-size: 20px;
+	font-weight:bold;
+	margin: 8px 0px 30px 0px;
+	text-align: left;
+	text-shadow: 2px 2px 1px #333;	
+}
+.toc_entry a{
+	color: #FFC600;
+}
+.article_details{
+	font-size: 14px;
+	padding-left: 30px;
+	color: #CCC;
+}
+.far_right {
+    text-align:right;
+}
+.read_more{
+	clear: both;
+	font-size: 12px;
+	font-weight: bold;
+	text-align: right;
+}
+.read_more a{
+	color: white;
+}
+.webtitle{
+	width: 960px;
+	margin: 0 auto;
+	font-family: siddhanta;
+	font-size: 30px;
+	font-weight:bold;
+	text-align: left;
+	color: white;
+	padding-bottom: 10px;
+	text-shadow: 2px 2px 4px #333;	
+}
 /* Main */
 
 	#main {
