Substituting siddhanta font for sanskrit text

--- a/php/css/style.css
+++ b/php/css/style.css
@@ -631,8 +631,10 @@
 			padding: 4em;
 		}
 	.sanskrit {
-			font-family:'siddhanta';
+			font-family:'siddhanta', 'Gubbi', 'Open Sans';
+/*
 			font-size:1em !important;
+*/
 			}
 	
 
