--- a/php/css/style.css
+++ b/php/css/style.css
@@ -1369,12 +1369,16 @@
 				
 			}
 		.inum {
+/*
 			font-family: 'Lato', sans-serif;
+*/
 			font-size: 15pt;
 			font-weight: 300;
 		}
 		.voliss {
+/*
 			font-family: 'Lato', sans-serif;
+*/
 			font-size: 0.9em ;
 			font-weight: 300;
 		}
