Commit No. 106 - Issue wise and Article wise pdf downloading link added

--- a/php/css/style.css
+++ b/php/css/style.css
@@ -1194,7 +1194,10 @@
 			width: 60px;
 			z-index: 1;
 		}
-
+		.downloadspan {
+			font-size: 0.8em;
+			color: #000000;
+		}
 		#sideButton .toggle:after {
 			background: rgba(163, 169, 170, 0.75);
 			border-radius: 2px;
